# GeoCalcLibCpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakelists.txt  FindGMP.cmake  GeoCalcLibTest.m  README.md  pullLrsLib.ps1  stairCount.m  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  license.lic.gpg  reinstall-cmake.sh
.github/workflows/: ci-build.yml
core/: CMakeLists.txt
core/include/: gmpMatrix.hpp  lrsinterface.hpp  mpqMatrix.hpp  mpz.hpp
core/src/: lrsinterface.cpp  mpqMatrix.cpp
lrslib/: CMakeLists.txt
lrslib/src/: libgen-mockup.cpp
src/: Makefile  facetEnumeration.cpp  gmpMatrix.cpp  gmpcpptest.cpp  lrsinterface.cpp  lrsinterface.hpp  make.m  mpq.cpp  mpq.hpp  mpqMatrix.hpp  mpz.cpp  mpz.hpp  vertexEnumeration.cpp
